data/derived/fa15/progs/unify/prog1194.ml.out
Characters 97-130:
  |(r,v) -> let sum = int_of_string (mulByDigit (int_of_string l1) s) in if (sum + r) > 9 then ((sum + r) / 10,((sum+r) mod 10)::v) else  (0, ((sum+r) mod 10)::v)
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type string
